[package]
name = "md_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
derivative = "2.2.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
clap = "4.5.4"
log = "0.4.21"
